adding overall status api and test

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,16 @@
 [tox]
 envlist = py27, py34
 
-[testenv]
+[testenv:py27]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/watchman
 commands = python runtests.py
 deps =
-    -r{toxinidir}/requirements-test.txt
+    -rrequirements-test.txt
+
+[testenv:py34]
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/watchman
+commands = python runtests.py
+deps =
+    -rrequirements34-test.txt
